--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "recoil": "^0.7.6",
+    "sqlite3": "^5.1.4",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
